fixed navbar thing, and deleted vh too much white space

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -69,7 +69,6 @@
 
 .cards {
   padding: 60px;
-  height: 50rem;
 }
 
 .footer-dark {
